--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="home">
       <header>
         <div class="container flex">
-          <div class="logo">PJ BOOKS</div>
+          <a href="index.html"><div class="logo">PJ BOOKS</div></a>
           <div class="search-input shadow">
-            <form class="">
+            <form class="form-search">
               <i class="fa-solid fa-magnifying-glass"></i>
               <input
                 type="text"
@@ -58,6 +58,9 @@
     <section class="latest bg-light" id="latest">
       <div class="container">
         <h1 class="books__heading my-3">Latest Books</h1>
+        <div class="empty">
+          <span class="md">No Book Uploaded!</span>
+        </div>
         <div class="books grid grid-5 py-1 ">
           <!-- Latest books Injection -->
         </div>
@@ -68,7 +71,13 @@
     <section class="trending bg-light" id="trending">
       <div class="container">
         <h1 class="books__heading my-3">Trending Books</h1>
+        <div class="empty">
+          <span class="md">No Book Uploaded!</span>
+        </div>
         <div class="books grid grid-5 py-1">
+          <!-- <div class="loader">
+
+          </div> -->
           <!-- Trending books Injection -->
         </div>
       </div>
@@ -78,6 +87,9 @@
     <section class="recommended bg-light" id="recommended">
       <div class="container">
         <h1 class="books__heading my-3">Recommended Books</h1>
+        <div class="empty">
+          <span class="md">No Book Uploaded!</span>
+        </div>
         <div class="books grid grid-5 py-1">
     <!-- Recommended books Injection -->
             
