worked on responsiveness

--- a/bookDetails.html
+++ b/bookDetails.html
@@ -22,7 +22,7 @@
         <div class="container flex">
           <a href="/"><div class="logo">PJ BOOKS</div></a>
           <div class="search-input shadow">
-            <form class="">
+            <form class="form-search">
               <i class="fa-solid fa-magnifying-glass"></i>
               <input
                 type="text"
