--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="login-image">
-      <div class="logo">PJ BOOKS.</div>
+      <div class="logo">PJ BOOKS</div>
     </div>
     <div class="login-details">
       <form id="login-form">
