--- a/user.html
+++ b/user.html
@@ -28,11 +28,15 @@
         </div>
         <div class="user-books">
           <div class="b flex">
-            <div class="ul">
+            <span class="filters btn"
+              ><span class="">Category </span
+              ><i class="fa-solid fa-caret-right"></i
+            ></span>
+            <div class="ul filter">
               <span id="books" class="active">Books</span>
               <span id="saved">Saved</span>
               <span id="borrow">Borrowed</span>
-              <span id="request" class="">Requests</span>
+              <span id="request">Requests</span>
             </div>
             <div class="form-active btn btn-outline">Add Book</div>
           </div>
@@ -45,9 +49,9 @@
             <!-- Inject User Book request-->
           </div>
 
-          <div class="books empty-container"> <!-- Inject empty books--></div>
+          <div class="books empty-container"><!-- Inject empty books--></div>
 
-          <div class="modal card request"> <!-- Inject pop ups--></div>
+          <div class="modal card request"><!-- Inject pop ups--></div>
         </div>
       </div>
     </section>
