made final changes

--- a/bookDetails.html
+++ b/bookDetails.html
@@ -81,20 +81,20 @@
     </div>
 
     <div class="modal card report">
-      <form id="book-request">
+      <form id="report-book">
         <h1 class="my-2 lg">Report Book</h1>
 
         <div class="form-control">
-          <p class="error-msg">Reason</p>
+          <p class="error-msg">Complaint</p>
           <textarea
             name="textarea"
-            class="input-control reason"
+            class="input-control report-reason"
             rows="3"
             cols="30"
           ></textarea>
         </div>
 
-        <input type="submit" value="Request" class="btn my-1" />
+        <input type="submit" value="Report" class="btn my-1" />
       </form>
     </div>
 
